--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   },
   "type": "module",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^4.6.2",
-    "clipboardy": "^3.0.0",
-    "sass": "^1.57.1"
+    "clipboardy": "^3.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "css-loader": "^6.7.3",
+    "postcss-loader": "^7.0.2",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1"
   }
 }
